kubernetes.yaml
---
# API deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilidade-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mobilidade-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mobilidade-api
    spec:
      containers:
        - name: mobilidade-api
          image: gcr.io/PROJECT_ID/IMAGE_API:TAG
          ports:
            - containerPort: 3000
      restartPolicy: Always

---
# API service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobilidade-api
  name: mobilidade-api
spec:
  ports:
    - name: "3000"
      port: 80
      targetPort: 3000
  selector:
    app: mobilidade-api

---
# API Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilidade-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.34.71.77.125.nip.io
      secretName: api-mobilidade-tls
  rules:
    - host: api.34.71.77.125.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilidade-api
                port:
                  number: 80

---
# MongoDB deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:4.2.1-bionic
          name: mongodb
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: dbdata
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata

---
# MongoDB service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb

---
# Web app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilidade-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilidade-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mobilidade-app
    spec:
      containers:
        - name: mobilidade-app
          image: gcr.io/PROJECT_ID/IMAGE_APP:TAG
          ports:
            - containerPort: 80
      restartPolicy: Always

---
# Web app service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobilidade-app
  name: mobilidade-app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: mobilidade-app

---
# Web app Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilidade-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - 34.71.77.125.nip.io
      secretName: app-mobilidade-tls
  rules:
    - host: 34.71.77.125.nip.io
      http:
        paths:
          - path: /pontos
            pathType: Prefix
            backend:
              service:
                name: mobilidade-app
                port:
                  number: 80
